--- a/styles/style.css
+++ b/styles/style.css
@@ -25,3 +25,57 @@ body {
   background: var(--main-white);
   font-family: 'Poppins', sans-serif;
 }
+
+/* Navbar */
+.navbar {
+  background: var(--main-white);
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  height: 4rem;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.25);
+  z-index: 1;
+}
+
+.navbar-center {
+  width: 100%;
+  max-width: 1170px;
+  margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1.5rem;
+}
+
+.navbar-brand {
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+
+.navbar-brand-title {
+  color: var(--primary-color);
+}
+
+.nav-icon {
+  font-size: 1.5rem;
+}
+
+.btn-cart {
+  position: relative;
+  cursor: pointer;
+}
+
+.cart-items {
+  position: absolute;
+  top: -12px;
+  right: -12px;
+  background-color: var(--primary-color);
+  padding: 0 5px;
+  border-radius: 30%;
+  color: var(--main-white);
+}
+
+/* Navbar */
