--- a/styles/style.css
+++ b/styles/style.css
@@ -221,3 +221,89 @@ img {
   color: var(--primary-color);
   text-align: center;
 }
+
+/* Cart */
+.cart-overlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  transition: var(--transition);
+  background: rgba(254, 95, 85, 0.5);
+  z-index: 2;
+  visibility: hidden;
+}
+
+.cart {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  overflow: scroll;
+  background: rgb(231, 226, 221);
+  z-index: 3;
+  padding: 1.5rem;
+  transition: var(--transition);
+  transform: translateX(101%);
+}
+
+@media screen and (min-width: 768px) {
+  .cart {
+    width: 30vw;
+    min-width: 28rem;
+  }
+}
+
+.cart-close {
+  font-size: 1.7rem;
+  cursor: pointer;
+}
+
+.cart h2 {
+  text-transform: capitalize;
+  text-align: center;
+  letter-spacing: var(--spacing);
+  margin-bottom: 2rem;
+}
+
+.cart-item {
+  display: grid;
+  align-items: center;
+  grid-template-columns: auto 1fr auto;
+  -moz-column-gap: 1.5rem;
+  column-gap: 1.5rem;
+  margin: 1.5rem 0;
+}
+
+.cart-item img {
+  width: 4.5rem;
+  height: 4.5rem;
+}
+
+.cart-item h4 {
+  font-size: 0.85rem;
+  text-transform: capitalize;
+  letter-spacing: var(--spacing);
+}
+
+.cart-item h5 {
+  margin: 0.5rem 0;
+  letter-spacing: var(--spacing);
+}
+
+.item-amount {
+  text-align: center;
+}
+
+.remove-item {
+  color: gray;
+  cursor: pointer;
+}
+
+.fa-chevron-up,
+.fa-chevron-down {
+  color: var(--primary-color);
+  cursor: pointer;
+}
